--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,14 @@ html {
 }
 
 /* Reducir el tamaño de letra para dispositivos pequeños */
-@media (max-width: 450px) {
+@media (max-width: 576px) {
   html {
     font-size: 0.8rem;
   }
+}
+
+body {
+  background-color: whitesmoke;
 }
 
 h2 {
@@ -24,13 +28,13 @@ h2 {
   font-weight: 700;
   margin-left: -1rem;
   margin-right: -1rem;
+  text-transform: uppercase;
 }
 
 h3 {
   margin-top: 1rem;
   margin-bottom: 1.5rem;
   font-weight: 700;
-  /* padding-left: 1rem; */
 }
 
 a {
@@ -44,11 +48,6 @@ a:hover {
   color: #00a7e7;
 }
 
-.container {
-  padding: 1rem;
-  /* max-width: 1300px; */
-}
-
 section {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -58,6 +57,7 @@ main img {
   display: block;
   margin: auto;
   margin-bottom: 2rem;
+  box-shadow: 10px 10px 8px #888888;
 }
 
 i.fa-li {
@@ -68,7 +68,11 @@ ul li {
   margin-bottom: 0.7rem;
 }
 
-.margin {
+/* Remove left margin from list items that uses Bootstrap cols */
+ul.fa-ul > li.col-lg-6 {
+  padding-left: 0;
+}
+section p {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
@@ -79,33 +83,16 @@ main img {
 }
 
 /* Nav bar */
-nav {
-  background-color: #231f20;
-  margin-bottom: 0;
-  height: auto;
-  padding-bottom: 0.5rem;
-  padding-top: 0.5rem;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 0.5rem 0;
-  margin: 0;
-}
-
-nav ul li {
-  margin: 0 1rem;
-  /* font-size: 1.8rem; */
-}
-
-nav ul li a {
+.navbar-dark .navbar-nav .nav-link {
   color: whitesmoke;
 }
 
+/* Elimina el navbar par pantallas medianas */
+@media (max-width: 768px) {
+  .navbar {
+    display: none;
+  }
+}
 /* ------------------------------------------------------ */
 
 /* Header */
@@ -119,6 +106,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  box-shadow: 0px 10px 8px #888888;
 }
 
 header.main-header {
@@ -151,21 +139,15 @@ header p {
   text-shadow: 0.2rem 0.1rem 0.1rem whitesmoke;
   font-weight: 700;
 }
-
 /* ------------------------------------------------------- */
 
+/* Footer */
 footer {
-  background-color: #231f20;
   text-align: center;
+  font-size: 0.8rem;
   color: whitesmoke;
   padding-bottom: 1rem;
   padding-top: 1rem;
   margin-top: 6rem;
 }
-
 /* ------------------------------------------------------- */
-
-/* Remove left margin from list items that uses Bootstrap cols */
-ul.fa-ul > li.col-lg-6 {
-  padding-left: 0;
-}
