--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,27 @@ html {
 }
 
 /* Reducir el tamaño de letra para dispositivos pequeños */
-@media (max-width: 576px) {
+@media (max-width: 770px) {
   html {
     font-size: 0.8rem;
   }
 }
 
-body {
-  background-color: whitesmoke;
+@media (max-width: 500px) {
+  html {
+    font-size: 0.7rem;
+  }
 }
 
+@media (max-width: 440px) {
+  html {
+    font-size: 0.55rem;
+  }
+}
+/* ----------------------------------*/
 h2 {
-  margin-top: 6rem;
-  margin-bottom: 3rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
   border-bottom: 2px solid #231f20;
   padding-bottom: 1rem;
   text-align: center;
@@ -36,6 +44,22 @@ h3 {
   margin-bottom: 1.5rem;
   font-weight: 700;
 }
+section {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.box-shadow {
+  box-shadow: 10px 10px 8px #888888;
+}
+
+main img {
+  display: block;
+  margin: auto;
+  margin-bottom: 2rem;
+  width: 100%;
+  max-width: 50rem;
+}
 
 a {
   text-decoration: none;
@@ -48,18 +72,6 @@ a:hover {
   color: #00a7e7;
 }
 
-section {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-main img {
-  display: block;
-  margin: auto;
-  margin-bottom: 2rem;
-  box-shadow: 10px 10px 8px #888888;
-}
-
 i.fa-li {
   color: #db0076;
 }
@@ -68,23 +80,14 @@ ul li {
   margin-bottom: 0.7rem;
 }
 
-/* Remove left margin from list items that uses Bootstrap cols */
-ul.fa-ul > li.col-lg-6 {
-  padding-left: 0;
-}
-section p {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
-main img {
-  width: 100%;
-  max-width: 50rem;
-}
-
 /* Nav bar */
+/* ----------- */
 .navbar-dark .navbar-nav .nav-link {
   color: whitesmoke;
+}
+
+nav ul li {
+  margin-bottom: 0rem;
 }
 
 /* Elimina el navbar par pantallas medianas */
@@ -93,12 +96,13 @@ main img {
     display: none;
   }
 }
-/* ------------------------------------------------------ */
+/* End Nav bar */
+/* ----------------- */
 
 /* Header */
+/* ----------- */
 header {
-  background-image: url(../img/portada.png);
-  /* height: 30vh; */
+  background-image: url(../img/portada.jpg);
   background-size: cover;
   min-height: 7rem;
   margin-bottom: 0;
@@ -106,6 +110,9 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+header.box-shadow {
   box-shadow: 0px 10px 8px #888888;
 }
 
@@ -126,22 +133,46 @@ header h1 {
   margin-bottom: 0;
   text-align: center;
   font-weight: 400;
-  text-shadow: 0.3rem 0.1rem 0.2rem whitesmoke;
+  text-shadow: 0.3rem 0.1rem 0.2rem white;
 }
 
 header strong {
   font-weight: 800;
 }
 
-header p {
+.sub-titulo {
   font-size: calc(0.5rem + 0.9vw);
   margin-top: 0.5rem;
-  text-shadow: 0.2rem 0.1rem 0.1rem whitesmoke;
+  text-shadow: 0.1rem 0.1rem 0.2rem white;
   font-weight: 700;
+  margin-bottom: 3rem;
 }
-/* ------------------------------------------------------- */
+/* End Header */
+/* ----------------- */
+
+.texto-lindo {
+  font-style: italic;
+  color: whitesmoke;
+}
+
+.color {
+  background-color: #00a7e7;
+}
+
+/* Estilo para el Mapa */
+.ubicacion {
+  text-align: center;
+}
+
+iframe {
+  width: 100%;
+  height: 20rem;
+  max-width: 50rem;
+  border: solid black 0.2rem;
+}
 
 /* Footer */
+/* ---------- */
 footer {
   text-align: center;
   font-size: 0.8rem;
@@ -150,4 +181,8 @@ footer {
   padding-top: 1rem;
   margin-top: 6rem;
 }
-/* ------------------------------------------------------- */
+
+footer p {
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
